# adaptive-muon

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_SUMMARY.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  environment-cpu.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_config.json  setup.py  sweep_muon.yaml  sweep_sgd_momentum.yaml
.github/workflows/: code-quality.yml
notebooks/: metrics.ipynb  pyhessian.ipynb  read_eigenvalues.ipynb  sweep_results.ipynb
run_configs/: ablation_study_config.yaml  muon_optimal_config.yaml  run_config.json  sgd_optimal_config.yaml
src/: __init__.py  data_loader.py  hessian_metrics.py  launcher.py  metrics.py  model.py  muon_adaptive.py  muon_original.py  muon_probabilistic.py  train_model.py  utils.py
tests/: test_model.py  test_utils.py
